--- a/app/src/main/res/menu/menu_doctor_sidebar.xml
+++ b/app/src/main/res/menu/menu_doctor_sidebar.xml
@@ -1,17 +1,35 @@
+<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/nav_dashboard"
-        android:icon="@drawable/ic_admin"
-        android:title="Dashboard" />
-    <item android:id="@+id/nav_antrian" android:title="Cek Antrian" android:icon="@drawable/ic_queue" />
-    <item android:id="@+id/nav_riwayat" android:title="Riwayat Perawatan" android:icon="@drawable/ic_history" />
-    <item
-        android:id="@+id/nav_profile"
-        android:title="Profil Dokter"
-        android:icon="@drawable/ic_person" />
 
-    <item
-        android:id="@+id/nav_logout"
-        android:icon="@drawable/ic_pregnant"
-        android:title="Logout" />
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_dashboard"
+            android:icon="@android:drawable/ic_menu_view"
+            android:title="Dashboard" />
+
+        <item
+            android:id="@+id/nav_antrian"
+            android:icon="@android:drawable/ic_menu_sort_by_size"
+            android:title="Cek Antrian" />
+
+        <item
+            android:id="@+id/nav_riwayat"
+            android:icon="@android:drawable/ic_menu_recent_history"
+            android:title="Riwayat Perawatan" />
+    </group>
+
+    <item android:title="Akun">
+        <menu>
+            <item
+                android:id="@+id/nav_profile"
+                android:icon="@android:drawable/ic_menu_my_calendar"
+                android:title="Profil Dokter" />
+
+            <item
+                android:id="@+id/nav_logout"
+                android:icon="@android:drawable/ic_lock_power_off"
+                android:title="Logout" />
+        </menu>
+    </item>
+
 </menu>
